tests/typing/bad/testfile-for-5.jl
for i = 1 : (37 + 5)
	j = 2 * idx
end
